<?xml version="1.0"?>
<package>
  <name>velocity_command_to_twist</name>
  <version>0.0.0</version>
  <description>Converts a heading and linear velocity in to a twist msg based on robots current heading..</description>
 
  <maintainer email="nicholishiell@gmail.com">Nicholi Shiell</maintainer>
  <author>Nicholi Shiell</author>
  <license>FREE</license>
  <url>http://bots.cs.mun.ca/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>bupimo_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
</package>
